Merge code into modules