@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>no.ssb.dapla.secrets</groupId>
-    <artifactId>dapla-secrets-client</artifactId>
+    <artifactId>dapla-secrets-client-project</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 
-    <name>Dapla Secrets Client</name>
-    <description>Dapla Secrets Client</description>
+    <name>Dapla Secrets Client Project</name>
+    <description>Dapla Secrets Client Project</description>
     <url>https://github.com/statisticsnorway/</url>
     <inceptionYear>2020</inceptionYear>
 
@@ -38,78 +38,18 @@
     </developers>
 
     <scm>
-        <connection>scm:git:git://github.com/statisticsnorway/dapla-secret-manager-client.git</connection>
-        <developerConnection>scm:git:git@github.com:statisticsnorway/dapla-secret-manager-client.git
+        <connection>scm:git:git://github.com/statisticsnorway/dapla-secret-manager-client-project.git</connection>
+        <developerConnection>scm:git:git@github.com:statisticsnorway/dapla-secret-manager-client-project.git
         </developerConnection>
-        <url>https://github.com/statisticsnorway/dapla-secret-manager-client/tree/master</url>
+        <url>https://github.com/statisticsnorway/dapla-secret-manager-client-project/tree/master</url>
         <tag>HEAD</tag>
     </scm>
 
-    <dependencies>
-        <dependency>
-            <groupId>no.ssb.spi</groupId>
-            <artifactId>service-provider-api</artifactId>
-            <version>0.4</version>
-        </dependency>
+    <modules>
+        <module>dapla-secret-manager-client-api</module>
+        <module>dapla-secret-manager-provider-dynamic-configuration</module>
+        <module>dapla-secret-manager-provider-google-secret-manager-rest-api</module>
+        <module>dapla-secret-manager-provider-google-secret-manager-java-api</module>
+    </modules>
 
-        <dependency>
-            <groupId>no.ssb.config</groupId>
-            <artifactId>dynamic-configuration</artifactId>
-            <version>0.4</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.google.cloud</groupId>
-            <artifactId>google-cloud-secretmanager</artifactId>
-            <version>1.2.3</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.6.0</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-                    <release>${java.version}</release>
-                    <encoding>${module.build.sourceEncoding}</encoding>
-                    <meminitial>64m</meminitial>
-                    <maxmem>512m</maxmem>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>3.1.0</version>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.1.0</version>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M5</version>
-                <configuration>
-                    <argLine>
-                        --illegal-access=deny
-                        -Xmx1500m
-                    </argLine>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 </project>
